[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/MenuManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/gallery/Galeria.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/GameMenu.tscn" type="PackedScene" id=3]

[node name="MenuManager" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Galeria" parent="." instance=ExtResource( 2 )]
visible = false
mouse_filter = 1

[connection signal="hide" from="GameMenu" to="." method="_on_GameMenu_hide"]
[connection signal="hide" from="Galeria" to="." method="_on_Galeria_hide"]
